# bi-evals

./: .env.example  .gitignore  CLAUDE.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: claude-code-review.yml
docs/: bi-eval-framework.md  duckdb-schema.md  feature_summary.md  golden-tests-guide.md  mvp-eval-platform.md  phase-6-plan.md  phase-6a-plan.md  phase-6b-plan.md  phase-6c-plan.md  phase-7-plan.md  phase-7.5-plan.md  phase-8-plan.md
src/bi_evals/: __init__.py  cli.py  config.py  trace_paths.py
src/bi_evals/compare/: __init__.py  diff.py
src/bi_evals/db/: __init__.py  client.py  factory.py  snowflake.py
src/bi_evals/golden/: __init__.py  loader.py  model.py
src/bi_evals/promptfoo/: __init__.py  bridge.py
src/bi_evals/provider/: agent_loop.py  api_endpoint.py  cost.py  entry.py
src/bi_evals/report/: __init__.py  builder.py
src/bi_evals/scorer/: __init__.py  dimensions.py  entry.py  sql_utils.py
src/bi_evals/store/: __init__.py  client.py  ingest.py  queries.py  schema.py
src/bi_evals/tools/: base.py  describe_table.py  file_reader.py  registry.py
tests/: conftest.py  test_agent_loop.py  test_anti_patterns.py  test_api_endpoint.py  test_bridge.py  test_cli_report.py  test_compare_diff.py  test_config.py  test_cost_alerts.py  test_db.py  test_demo_routing.py  test_demo_scorer_phase_3.py  test_golden.py  test_multi_model.py  test_prompt_drift.py  test_report_builder.py  test_scorer.py  test_stability.py  test_staleness.py  test_store_ingest.py  test_store_queries.py  test_store_schema.py  test_ui.py  test_variance.py
(+21 files in other folders)
